--- a/index.html
+++ b/index.html
@@ -3946,6 +3946,16 @@
 											</h2>
 										</div>
 									</div>
+									<div class="elementor-element elementor-element-7ba74da elementor-widget elementor-widget-heading"
+										data-id="7ba74da" data-element_type="widget"
+										data-settings="{&quot;tc_dark_mode_responsive_hide_in_dark&quot;:&quot;no&quot;,&quot;tc_dark_mode_responsive_hide_in_light&quot;:&quot;no&quot;}"
+										data-widget_type="heading.default">
+										<div class="elementor-widget-container">
+											<h2 class="elementor-heading-title elementor-size-default"><a
+													href="https://docs.google.com/document/d/1U7J7Qvk6B7lwjPk_nDtpyZC9J9A5ntdkg98ULEHyP6I/edit?usp=sharing" target="_blank">Terms And Conditions</a>
+											</h2>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
