--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ web design z index, website developer in zirakpur, logo website developer german
 
 
         <!-- CAL COM ///////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-        <section id="calcom">
+        <section id="calcom" style="width:100%;height:80%;overflow:scroll">
             <br>
             <br>
             <div class="title">
@@ -379,7 +379,7 @@ web design z index, website developer in zirakpur, logo website developer german
             <div class="text">
                 <!-- Cal inline embed code begins -->
                 <!-- Cal inline embed code begins -->
-                <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline-30min"></div>
+                <div style="width:100%;height:80%;overflow:scroll" id="my-cal-inline-30min"></div>
                 <script type="text/javascript">
                     (function (C, A, L) {
                         let p = function (a, ar) {
