--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ web design z index, website developer in zirakpur, logo website developer german
                     <center>
                         <h1>ArchiaStudio</h1>
                     </center>
-                    <span>WebSolutions</span> And <span>Consultancy</span>
+                    <p><span>WebSolutions</span> And <span>Consultancy</span></p>
                 </div>
             </div>
         </section>
@@ -452,6 +452,8 @@ web design z index, website developer in zirakpur, logo website developer german
                     Mohali,Punjab 140301</span><br>
                 <span>> C1204,Mahavir Universe,<br>
                     Bhandup(West),Mumbai,Maharastra</span>
+                <br><br>
+                <span style="color: white;"><a href="/PrivacyPolicy.txt">PrivacyPolicy</a> | <a href="/TermsandConditions.txt">TOC</a></span>
             </div>
         </div>
     </div>
