--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@ web design z index, website developer in zirakpur, logo website developer german
     <link rel="apple-touch-icon" href="warehouse/data/images/ducks/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="warehouse/css/warehouse.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KX4EKGY3VC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KX4EKGY3VC');
+</script>
 
 </head>
 
