--- a/404.html
+++ b/404.html
@@ -18,6 +18,15 @@
 	<meta property="og:site_name" content="ArchiaStudio – Creative Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KX4EKGY3VC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KX4EKGY3VC');
+</script>
     <style>
         @font-face {
             font-family: 'Bold';
