--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ web design z index, website developer in zirakpur, logo website developer german
             <div class="text">
                 <div>
                     <center>
-                        <h4>This is what it feels like <br>when you are at the top of the competition!</h4>
+                        <h4>This is what it feels like <br>when you we handle your business!</h4>
                         <span>@ArchiaStudio</span><br>
                     </center>
                 </div>
