--- a/404.html
+++ b/404.html
@@ -121,7 +121,7 @@
 
 <body>
   <!-- Crewmate drifting -->
-  <img src="warehouse/data/images/amongus.png" alt="Crewmate" class="crewmate" />
+  <img src="https://archiastudio.com/warehouse/data/images/amongus.png" alt="Crewmate" class="crewmate" />
 
   <!-- Texts -->
   <div class="ejected-container">
