--- a/index.html
+++ b/index.html
@@ -386,9 +386,19 @@ web design z index, website developer in zirakpur, logo website developer german
             </div>
             <br>
             <div class="text">
+                <p>Consultancy starts @₹49!</p><br><br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <!-- Cal inline embed code begins -->
                 <!-- Cal inline embed code begins -->
-                <div style="width:100%;height:80%;overflow:scroll" id="my-cal-inline-30min"></div>
+                <!-- <div style="width:100%;height:80%;overflow:scroll" id="my-cal-inline-30min"></div>
                 <script type="text/javascript">
                     (function (C, A, L) {
                         let p = function (a, ar) {
@@ -436,7 +446,7 @@ web design z index, website developer in zirakpur, logo website developer german
                         "hideEventTypeDetails": false,
                         "layout": "month_view"
                     });
-                </script>
+                </script> -->
                 <!-- Cal inline embed code ends -->
             </div>
         </section>
@@ -446,6 +456,7 @@ web design z index, website developer in zirakpur, logo website developer german
             <div class="text">
                 <h1>ArchiaStudio</h1>
                 <p>WebSolutions And Consultancy</p>
+                <span style="color: white;"><a href="/PrivacyPolicy.txt">PrivacyPolicy</a> | <a href="/TermsandConditions.txt">TOC</a></span>
                 <br>
                 <br>
                 <h2>Drop a Call:</h2>
@@ -462,7 +473,6 @@ web design z index, website developer in zirakpur, logo website developer german
                 <span>> C1204,Mahavir Universe,<br>
                     Bhandup(West),Mumbai,Maharastra</span>
                 <br><br>
-                <span style="color: white;"><a href="/PrivacyPolicy.txt">PrivacyPolicy</a> | <a href="/TermsandConditions.txt">TOC</a></span>
             </div>
         </div>
     </div>
