--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ web design z index, website developer in zirakpur, logo website developer german
             <div class="text">
                 <h1>ArchiaStudio</h1>
                 <p>WebSolutions And Consultancy</p>
-                <span style="color: white;"><a href="/PrivacyPolicy.txt">PrivacyPolicy</a> | <a href="/TermsandConditions.txt">TOC</a></span>
+                <span style="color: white;"><a href="/PrivacyPolicy.txt">PrivacyPolicy</a> | <a href="/TermsandConditions.txt">TOC</a> | <a href="/RefundPolicy.txt">RefundPolicy</a></span>
                 <br>
                 <br>
                 <h2>Drop a Call:</h2>
