--- a/renew.html
+++ b/renew.html
@@ -114,6 +114,14 @@
         const data = JSON.parse(txt);
 
         if (data.redirectUrl) {
+          // ✅ Open order tracking in a new window
+          if (data.callbackUrl) {
+            window.open(data.callbackUrl, "_blank");
+            console.log("Opened callback URL:", data.callbackUrl);
+          }
+
+          // ✅ Redirect to PhonePe checkout (open in same tab)
+          console.log("Redirecting to:", data.redirectUrl);
           window.location.href = data.redirectUrl;
         } else {
           alert("Error: " + (data.error || "Payment initialization failed."));
