--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ web design z index, website developer in zirakpur, logo website developer german
             <div class="text">
                 <div>
                     <center>
-                        <h4>This is what it feels like <br>when you we handle your business!</h4>
+                        <h4>This is what it feels like <br>when we handle your business!</h4>
                         <span>@ArchiaStudio</span><br>
                     </center>
                 </div>
@@ -386,7 +386,7 @@ web design z index, website developer in zirakpur, logo website developer german
             </div>
             <br>
             <div class="text">
-                <p>Consultancy starts @₹49!</p><br><br>
+                <p>Consultancy starts @₹499!</p><br><br>
                 <br>
                 <br>
                 <br>
