--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Archia Studio - Next Gen Web Solution And consultancy</title>
-    <<meta name="robots" content="max-image-preview:large">
+    <meta name="robots" content="max-image-preview:large">
     <meta name="description"
         content="We help businesses thrive through innovative creative strategies. From branding and design to digital marketing and beyond, we deliver results that drive growth and exceed expectations.">
 
