--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ web design z index, website developer in zirakpur, logo website developer german
                 </div>
             </div>
 
-            <button class="mainButton">
+            <button class="mainButton" onclick="window.open('https://rzp.io/rzp/yOcFUFe')">
                 Get Started
             </button>
         </div>
@@ -308,7 +308,8 @@ web design z index, website developer in zirakpur, logo website developer german
             <a href="/TermsandConditions.txt" target="_blank">TOC</a> |
             <a href="/RefundPolicy.txt" target="_blank">RefundPolicy</a> <br>
             <a href="tel:+91 7738 600 388">+91 7738 600 388</a> |
-            <a href="mailto:connect@archiastudio.com">connect@archiastudio.com</a> <br><br>
+            <a href="mailto:connect@archiastudio.com">connect@archiastudio.com</a> <br>
+            <a href="/renew.html">Renew Key!</a><br><br>
             <h2>Post Mail</h2>
             <span>&gt; 127,Green Enclave,Sector 118,<br>
                 Mohali,Punjab 140301</span> <br>
