--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ web design z index, website developer in zirakpur, logo website developer german
                     Clients</div>
                 <div class="item"><img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"> 4.8/5 Average
                     Rating</div>
-                <div class="item"><img src="/phone-pe.jpg"> 100% Secure
+                <div class="item"><img src="warehouse/data/images/phone-pe.jpg"> 100% Secure
                     Checkout</div>
                 <div class="item"><img src="https://cdn-icons-png.flaticon.com/512/747/747376.png"> 24/7 Support</div>
 
@@ -187,7 +187,7 @@ web design z index, website developer in zirakpur, logo website developer german
                     Clients</div>
                 <div class="item"><img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"> 4.8/5 Average
                     Rating</div>
-                <div class="item"><img src="/phone-pe.jpg"> 100% Secure
+                <div class="item"><img src="warehouse/data/images/phone-pe.jpg"> 100% Secure
                     Checkout</div>
                 <div class="item"><img src="https://cdn-icons-png.flaticon.com/512/747/747376.png"> 24/7 Support</div>
 
