--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@ web design z index, website developer in zirakpur, logo website developer german
         }
     </style>
     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDJ95WERH3">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RDJ95WERH3');
+</script>
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KX4EKGY3VC"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
