--- a/payment/event/bookingConfirmed.html
+++ b/payment/event/bookingConfirmed.html
@@ -16,6 +16,16 @@
     <link rel="icon" href="../../warehouse/data/images/ducks/favicon.png" sizes="192x192">
     <link rel="apple-touch-icon" href="warehouse/data/images/ducks/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDJ95WERH3">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RDJ95WERH3');
+</script>
 </head>
 
 <body>
