--- a/payment/event/redirect.html
+++ b/payment/event/redirect.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/themes/odometer-theme-default.min.css">
 
     <link rel="icon" href="../../warehouse/data/images/ducks/favicon.png" sizes="32x32">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDJ95WERH3">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RDJ95WERH3');
+</script>
 </head>
 
 <body>
