--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ web design z index, website developer in zirakpur, logo website developer german
         <div class="box">
             <h2>Our Story</h2>
             <div style="font-family: Montserrat;">
-                <span id="time" class="odometer">0</span> Seconds | Since 2020-11-24 (Started As Shappiree Media) 
+                <span id="time" class="odometer">0</span> Seconds | Since 2020-11-24 (Started As Sapphiree Media) 
             </div><br>
             <script>
                 // Start date (25 Nov 2024)
